--- a/TODO
+++ b/TODO
@@ -1,5 +1,9 @@
 - write readme/doc
-
 - init/update from swagger spec
 - auto get mocks from real API
 - status code from file name ?
+
+// CLI params
+// -i, --import <swagger URL>
+// -u, --use-headers <json> (for swagger import)
+// -d, --dir-level N use N dir levels for import (default: 1)
